Add scaleOut feature for VMGroup in a MCIS (#1181)
